# Software-Auto-Soring

ai/: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml  start.py
ai/app/: __init__.py  main.py
ai/app/api/dependencies/: services.py
ai/app/api/routers/: problems.py  scoring.py  three_phase_scoring.py
ai/app/api/schemas/: scoring_schemas.py
ai/app/config/: logging.py  settings.py
ai/app/core/: __init__.py
ai/app/core/models/: __init__.py  input_output.py  scoring.py  uml_components.py
ai/app/core/models/diagrams/: __init__.py  class_diagram_models.py  diagram_factory.py  sequence_diagram_models.py
ai/app/core/pipeline/: __init__.py  scoring_pipeline.py  three_phase_pipeline.py
ai/app/core/scoring/: __init__.py  component_matcher.py  metrics_calculator.py
ai/app/infra/llm_providers/: gemini_provider.py  openai_provider.py
ai/app/infra/storage/: __init__.py  file_storage.py
ai/app/services/: __init__.py
ai/app/services/feedback/: __init__.py  error_analyzer.py  feedback_generator.py  phase_three_orchestrator.py  score_calculator.py  suggestion_engine.py
ai/app/services/llm/: __init__.py  extraction_service.py  feedback_service.py
ai/app/services/normalization/: __init__.py  code_normalizer.py  convention_analyzer.py  difference_detector.py  normalization_orchestrator.py  normalization_validator.py
ai/app/services/parsing/: __init__.py  class_diagram_parser.py  metrics_engine.py  phase_two_extractor.py  plantuml_service.py  use_case_parser.py
ai/app/utils/: file_utils.py  text_processing.py
ai/data/problems/: 9bbd9238-8e6d-496d-ae1c-d741b7ff0640.json
ai/data/results/: 3600026d-6936-46e6-97b8-12fd325dafcb.json  c79f2b2a-84e7-4768-8a88-4808aec15b0b.json  e8869510-f4d5-4ae9-8bfc-6e667069e493.json  fde5ae96-e94e-4a71-bc09-225e1b9d8e82.json
ai/data/submissions/: 18629cb2-e56a-4fd7-92c5-55f8147cd295.json  41743c5b-26f0-4b4d-b348-c99a9da6a918.json  7b4142f4-0b3a-46fd-897d-44791bdc3a8a.json  7b4142f4-0b3a-46fd-897d-44791bdc3a8a.puml  810d2dde-3986-4eb7-a6c3-17828ac75824.json
ai/scripts/: check_config.py  setup.py
ai/tests/: __init__.py  conftest.py
ai/tests/integration/: test_scoring_pipeline.py
ai/tests/unit/core/: test_scoring.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInterface.tsx
frontend/src/hooks/: use-diagram-scoring.ts
frontend/src/services/: api.ts
